# MCUBoot_NuMicro

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.sample  README.md  build.ps1
bl2/: CMakeLists.txt
bl2/ext/mcuboot/: CMakeLists.txt  bl2_main.c  flash_map_extended.c  keys.c  mcuboot_default_config.cmake
bl2/ext/mcuboot/config/: mcuboot-mbedtls-cfg.h
bl2/ext/mcuboot/include/flash_map/: flash_map.h
bl2/ext/mcuboot/include/flash_map_backend/: flash_map_backend.h
bl2/ext/mcuboot/include/os/: os_malloc.h
bl2/ext/mcuboot/include/sysflash/: sysflash.h
bl2/platform/: CMakeLists.txt
bl2/platform/common/: Driver_Flash.c  boot.c  exit.c  fmc_drv.c  fmc_drv.h  nvmc_drv.h  nvqspi_drv.h  nvspi_drv.h  nvspim_drv.h  qspi_drv.c  rmc_drv.c  spi_drv.c  spim_drv.c  syscall.c  uart_stdout.c
bl2/platform/driver/: Driver_Flash.h
bl2/platform/m2351/: boot_hal.c
bl2/platform/m2351/bsplib/: CMakeLists.txt
bl2/platform/m2351/partition/: flash_layout.h
bl2/platform/m2354/: CMakeLists.txt  boot_hal.c  uart_stdout.c
bl2/platform/m2354/bsplib/: CMakeLists.txt
bl2/platform/m2354/partition/: flash_layout.h
bl2/platform/m2354/scatter/: m2354.sct
bl2/platform/m261/: CMakeLists.txt  boot_hal.c
bl2/platform/m261/bsplib/: CMakeLists.txt
bl2/platform/m261/partition/: flash_layout.h
bl2/platform/m2l31/: boot_hal.c
bl2/platform/m2l31/bsplib/: CMakeLists.txt
bl2/platform/m2l31/partition/: flash_layout.h  region_defs.h
bl2/platform/m2l31/scatter/: m2l31.sct
bl2/platform/m3331/: boot_hal.c
bl2/platform/m3331/bsplib/: CMakeLists.txt
bl2/platform/m3331/partition/: flash_layout.h
bl2/platform/m3331/scatter/: m3331.sct
bl2/platform/m460/: boot_hal.c
bl2/platform/m460/bsplib/: CMakeLists.txt
bl2/platform/m460/partition/: flash_layout.h
bl2/platform/m460/scatter/: m460.ld
bl2/platform/m480/: boot_hal.c
bl2/platform/m480/bsplib/: CMakeLists.txt
bl2/platform/m480/partition/: flash_layout.h
bl2/platform/m480/scatter/: m480.sct
bl2/platform/m55m1/: boot_hal.c
bl2/platform/m55m1/bsplib/: CMakeLists.txt
bl2/platform/m55m1/partition/: flash_layout.h
bl2/platform/m55m1/scatter/: m55m1.sct
bl2/src/: flash_map.c
config/: config_base.cmake  validation.cmake
docs/: keys.md  layout.md  spi.md
lib/ext/: CMakeLists.txt
lib/ext/mbedtlslib/: CMakeLists.txt
lib/ext/mcubootlib/: CMakeLists.txt
toolchain/: armclang.cmake
toolchain/Modules/Platform/: Generic-ARMClang-ASM-cortex-m23.cmake  Generic-ARMClang-ASM-cortex-m33.cmake  Generic-ARMClang-ASM-cortex-m4.cmake  Generic-ARMClang-ASM-cortex-m55.cmake  Generic-ARMClang-C-cortex-m23.cmake  Generic-ARMClang-C-cortex-m33.cmake  Generic-ARMClang-C-cortex-m4.cmake  Generic-ARMClang-C-cortex-m55.cmake  Generic-ARMClang-cortex-m-common.cmake  Generic-GNU-ASM-cortex-m4.cmake  Generic-GNU-C-cortex-m4.cmake  Generic-GNU-cortex-m-common.cmake  Generic-cortex-m-common.cmake
